Fix credits page spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -642,6 +642,11 @@ button.btn-qa[aria-expanded="true"]  {
     color: #7B73F0;
 }
 
+.credits-masthead {
+    padding-top: calc(5rem + 74px);
+    padding-bottom: 5rem;
+}
+
 @media (max-width: 1024px) {
 
     html {
@@ -740,6 +745,11 @@ button.btn-qa[aria-expanded="true"]  {
     .credits-names {
         font-size: 1.2rem;
         letter-spacing: 0.15rem;
+    }
+
+    .credits-masthead {
+        padding-top: calc(5rem + 40px);
+        padding-bottom: 5rem;
     }
 }
 
@@ -842,5 +852,10 @@ button.btn-qa[aria-expanded="true"]  {
     .credits-names {
         font-size: 1.2rem;
         letter-spacing: 0.1rem;
+    }
+
+    .credits-masthead {
+        padding-top: calc(5rem + 50px);
+        padding-bottom: 5rem;
     }
 }
